2011-04-01  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by Benjamin Poulain.

        Changed QWebFramePrivate::renderFromTiledBackingStore to call directly into
        Scrollbar/PanIcon rendering, bypassing the potential relayout in renderRelativeCoords.

        Tiled painting still causes synchronous layout when
        accelerated compositing and texture mapper are enabled
        https://bugs.webkit.org/show_bug.cgi?id=56929

        * Api/qwebframe.cpp:
        (QWebFramePrivate::renderFromTiledBackingStore):
        (QWebFramePrivate::renderRelativeCoords):
        (QWebFramePrivate::renderFrameWidgets):
        * Api/qwebframe_p.h:

Canonical link: https://commits.webkit.org/72467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82676 268f45cc-cd09-0410-ab3c-d52691b4dbfc